--- a/styles/style.css
+++ b/styles/style.css
@@ -162,7 +162,7 @@ nav {
 }
 
 .border {
-    background-image: url('/B11A1--assignment-1/assets/quote-bg.png');
+    background-image: url('../B11A1--assignment-1/assets/quote-bg.png');
     background-repeat: no-repeat;
 
     padding: 5px 5px 5px 10px;
